...
          </View>
        </FormRow>

        <View style={styles.divider} />

        {/* 球場 */}
        <FormRow label="球場">
          <View style={styles.comboBox}>
            <RNTextInput
              style={styles.comboInput}
              value={stadiumName}
              onChangeText={(v) => {
                onFieldChange("stadiumName", v);
...
          </>
        )}

        <View style={styles.divider} />

        {/* 自チーム */}
        <FormRow label="自チーム" required error={fieldErrors.myTeamName}>
          <View style={styles.comboBox}>
            <RNTextInput
              style={styles.comboInput}
              value={myTeamName}
              onChangeText={(v) => {
                onFieldChange("myTeamName", v);
...
        )}

        <View style={styles.divider} />

        {/* 相手チーム */}
        <FormRow
          label="相手チーム"
          required
          error={fieldErrors.opponentTeamName}
        >
          <View style={styles.comboBox}>
            <RNTextInput
              style={styles.comboInput}
...
